syntax = "proto3";

option csharp_namespace = "Server";

package logger;

service Logger {
  rpc SendLog (LogRequest) returns (LogResponse);
}

message LogRequest {
  string deviceId = 1;
  string message = 2;
  string timestamp = 3;
}

message LogResponse {
  string status = 1;
}

